Fix overlapping rows

--- a/bom_squad/static/index.css
+++ b/bom_squad/static/index.css
@@ -233,3 +233,7 @@
       width: 70px;
       position: absolute;
 }
+
+.home-module-list {
+    margin: calc(10vh + 55px) 0 10vh 0;
+}
